--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Modificar.cshtml
@@ -863,7 +863,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("nombre_imagen", "ActivoFijo", new { Area = "ActivoFijo" })',
+            url: '@Url.Action("nombre_imagen", "Empleado", new { Area = "RRHH" })',
             async: false,
             bDeferRender: true,
             bProcessing: true,
