--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
@@ -163,9 +163,14 @@
     }
 }
 
-</script>
 
 <script>
+
+    $(function () {
+        calcular_vacaciones();
+       
+    });
+
     function calcular_vacaciones()
             {
                  var datos = {
