--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_GridViewPartial_solicitud_vacaciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_GridViewPartial_solicitud_vacaciones.cshtml
@@ -1,66 +1,66 @@
 @using System.Web.UI.WebControls;
 @{
-        var grid = Html.DevExpress().GridView(settings => {
-            settings.Name = "GridView_solicitud_vacaciones";
-            settings.CallbackRouteValues = new { Controller = "Vacaciones", Action = "GridViewPartial_solicitud_vacaciones" };
+    var grid = Html.DevExpress().GridView(settings => {
+        settings.Name = "GridView_solicitud_vacaciones";
+        settings.CallbackRouteValues = new { Controller = "Vacaciones", Action = "GridViewPartial_solicitud_vacaciones", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
 
-            settings.Width = Unit.Percentage(100);
-            settings.KeyFieldName = "IdSolicitud";
-
-
-            //Configuracion responsive
-            settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
-            settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-            settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-            settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-            settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
-
-            //Configuración para que la grilla no muestre texto completo
-            settings.SettingsBehavior.AllowEllipsisInText = true;
-            settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
-            settings.Width = Unit.Percentage(100);
-
-            settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
-            settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-            settings.Settings.VerticalScrollableHeight = 400;
-            settings.SettingsPager.Visible = true;
-            settings.SettingsPager.PageSize = 10;
-            settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-            settings.SettingsPager.AlwaysShowPager = true;
+        settings.Width = Unit.Percentage(100);
+        settings.KeyFieldName = "IdSolicitud";
 
 
-            settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-            settings.Settings.ShowFilterRow = true;
-            settings.Settings.ShowHeaderFilterButton = true;
-            settings.SettingsBehavior.AllowSelectByRowClick = true;
+        //Configuracion responsive
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
+        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+        settings.Width = Unit.Percentage(100);
+
+        settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
+        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
+        settings.Settings.VerticalScrollableHeight = 400;
+        settings.SettingsPager.Visible = true;
+        settings.SettingsPager.PageSize = 10;
+        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
+        settings.SettingsPager.AlwaysShowPager = true;
 
 
-            settings.SettingsExport.EnableClientSideExportAPI = true;
-            settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-            settings.Toolbars.Add(t =>
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
+        settings.Settings.ShowFilterRow = true;
+        settings.Settings.ShowHeaderFilterButton = true;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
+
+
+        settings.SettingsExport.EnableClientSideExportAPI = true;
+        settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
+        settings.Toolbars.Add(t =>
+        {
+            t.EnableAdaptivity = true;
+            t.Items.Add(GridViewToolbarCommand.ExportToPdf).Text = "Exportar a PDF";
+            t.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Exportar a XLS";
+            t.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Exportar a XLSX";
+            t.Items.Add(GridViewToolbarCommand.ExportToDocx).Text = "Exportar a DOCX";
+            t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
+            t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
+        });
+        settings.SettingsExport.RenderBrick = (sender, e) =>
+        {
+            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
+                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
+        };
+        settings.HtmlRowPrepared = (s, e) =>
+        {
+            if (Convert.ToString(e.GetValue("Estado")) == "I")
             {
-                t.EnableAdaptivity = true;
-                t.Items.Add(GridViewToolbarCommand.ExportToPdf).Text = "Exportar a PDF";
-                t.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Exportar a XLS";
-                t.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Exportar a XLSX";
-                t.Items.Add(GridViewToolbarCommand.ExportToDocx).Text = "Exportar a DOCX";
-                t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
-                t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
-            });
-            settings.SettingsExport.RenderBrick = (sender, e) =>
-            {
-                if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                    e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
-            };
-            settings.HtmlRowPrepared = (s, e) =>
-            {
-                if (Convert.ToString(e.GetValue("Estado")) == "I")
-                {
-                    e.Row.ForeColor = System.Drawing.Color.Red;
-                }
+                e.Row.ForeColor = System.Drawing.Color.Red;
+            }
 
-               
-            };
+
+        };
         settings.Columns.Add(c =>
         {
             c.Caption = "#";
